--- a/LR.WebUI/Areas/Admin/less/site.less
+++ b/LR.WebUI/Areas/Admin/less/site.less
@@ -17,3 +17,8 @@ a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, bu
 a:not(.btn), a:link:not(.btn), a:active:not(.btn), a:visited:not(.btn), a:focus:not(.btn), button:not(.btn), button:link:not(.btn), button:visited:not(.btn), button:active:not(.btn), button:focus:not(.btn), input:focus:not(.btn) {
     color:inherit;
 }
+
+.field-validation-error{
+    color:@color-danger;
+    font-size:11px;
+}
