--- a/LR.WebUI/Views/Home/Index.cshtml
+++ b/LR.WebUI/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Гавная";
 }
 
-@section gallery{
+@section full{
     @Html.Action("Gallery", "Articles", new { boxesCount = 3 })
 }
 
