--- a/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -319,23 +319,6 @@
                         <li>
                             <a href="#"><i class="fa fa-archive fa-fw"></i> Материалы<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                @if (User.IsInRole("admin"))
-                                {
-                                    <li>
-                                        <a href="#"><i class="fa fa-graduation-cap"></i> Афоризмы <span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
-                                            <li>
-                                                <a href="@Url.Action("Index", "Aphorisms")">Каталог афоризмов</a>
-                                            </li>
-                                            <li>
-                                                <a href="@Url.Action("Index", "MaterialCategories", new { mct = SX.WebCore.Enums.ModelCoreType.Aphorism })">Категории афоризмов</a>
-                                            </li>
-                                            <li>
-                                                <a href="@Url.Action("Index", "AuthorAphorisms")">Авторы афоризмов</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                }
                                 @if (User.IsInRole("author-article"))
                                 {
                                     <li>
@@ -350,44 +333,6 @@
                                             {
                                                 <li>
                                                     <a href="@Url.Action("Index", new { controller = "MaterialCategories", mct = SX.WebCore.Enums.ModelCoreType.Article })">Категории статей</a>
-                                                </li>
-                                            }
-                                        </ul>
-                                    </li>
-                                }
-                                @if (User.IsInRole("author-news"))
-                                {
-                                    <li>
-                                        <a href="#"><i class="fa fa-newspaper-o"></i> Новости <span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
-
-                                            <li>
-                                                <a href="@Url.Action("Index", new { controller = "News" })">Каталог новостей</a>
-                                            </li>
-
-                                            @if (User.IsInRole("admin"))
-                                            {
-                                                <li>
-                                                    <a href="@Url.Action("Index", new { controller = "MaterialCategories", mct = SX.WebCore.Enums.ModelCoreType.News })">Категории новостей</a>
-                                                </li>
-                                            }
-                                        </ul>
-                                    </li>
-                                }
-                                @if (User.IsInRole("admin"))
-                                {
-                                    <li>
-                                        <a href="#"><i class="fa fa-smile-o"></i> Юмор <span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
-
-                                            <li>
-                                                <a href="@Url.Action("Index", new { controller = "Humor" })">Каталог юмора</a>
-                                            </li>
-
-                                            @if (User.IsInRole("admin"))
-                                            {
-                                                <li>
-                                                    <a href="@Url.Action("Index", new { controller = "MaterialCategories", mct = SX.WebCore.Enums.ModelCoreType.Humor })">Категории юмора</a>
                                                 </li>
                                             }
                                         </ul>
@@ -410,9 +355,9 @@
                                     <li>
                                         <a href="@Url.Action("EditRobotsFile", new { controller= "Seo" })"><i class="fa fa-ship"></i> robot.txt</a>
                                     </li>
-                                    <li>
+                                    @*<li>
                                         <a href="@Url.Action("Index", new { controller= "SeoWordCounter" })"><i class="fa fa-compress"></i> Счетчик слов</a>
-                                    </li>
+                                    </li>*@
                                     <li>
                                         <a href="@Url.Action("Index", new { controller= "BannedUrls" })"><i class="fa fa-ban"></i> Забаненные адреса</a>
                                     </li>
@@ -444,9 +389,6 @@
                                     <li>
                                         <a href="@Url.Action("EditSite", new { controller = "sitesettings" })">Настройки сайта</a>
                                     </li>
-                                    <li>
-                                        <a href="@Url.Action("EditEmptyGame", new { controller = "sitesettings" })">Иконка меню игр</a>
-                                    </li>
                                     @if (User.IsInRole("architect"))
                                     {
                                         <li>
@@ -468,12 +410,6 @@
                         @if (User.IsInRole("admin"))
                         {
                             <li>
-                                <a href="@Url.Action("Index", "ProjectSteps")"><i class="fa fa-calendar fa-fw"></i> Развитие проекта</a>
-                            </li>
-                        }
-                        @if (User.IsInRole("admin"))
-                        {
-                            <li>
                                 <a href="@Url.Action("Index", "Valutes")"><i class="fa fa-rub fa-fw"></i> Курсы валют ЦБ РФ</a>
                             </li>
                         }
@@ -486,7 +422,7 @@
                                 @if (User.IsInRole("architect"))
                                 {
                                     <li>
-                                        <a href="@Url.Action("Index", "MaterialCategories", new { mct=SX.WebCore.Enums.ModelCoreType.Manual})">Справочные категории</a>
+                                        <a href="@Url.Action("Index", "MaterialCategories", new { mct=Enums.ModelCoreType.Manual})">Справочные категории</a>
                                     </li>
                                     <li>
                                         <a href="@Url.Action("Index", "Manuals")">Справочные материалы</a>
