--- a/LR.WebUI/Views/Pictures/_Last.cshtml
+++ b/LR.WebUI/Views/Pictures/_Last.cshtml
@@ -1,41 +1,24 @@
 ﻿@model SxVMPicture[]
+@{
+    SxVMPicture item = null;
+}
 
-@*@if (Model.Any())
-{*@
+@if (Model.Any())
+{
     <aside class="last-pictures">
         <h4 class="green-header"><span class="green-header__arrow">Последние фото</span></h4>
         <div class="last-pictures__box">
             <ul>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
-                <li>
-                    <a href="#" class="last-pictures__img" style="background-image:url('/content/static/temp/13712292_907698102687005_2080260736_n.jpg')"></a>
-                </li>
+                @for (int i = 0; i < Model.Length; i++)
+                {
+                    item = Model[i];
+                    <li>
+                        <a href="#" class="last-pictures__img" style="background-image:url('@Url.Action("Picture", "Pictures", new { id=item.Id})')"></a>
+                    </li>
+                }
             </ul>
         </div>
         <br />
         <br />
     </aside>
-@*}*@
+}
